<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/app_background" android:weightSum="1" android:padding="30dp">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0.07">
    </LinearLayout>
    <ImageView
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:id="@+id/imageView" android:layout_gravity="center_horizontal"
            android:src="@drawable/happilogo" android:onClick="happilogoAdministratorlogin"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0.14">
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AdminLogin"
            android:id="@+id/textView" android:textStyle="bold" android:layout_gravity="center"
            android:layout_weight="0.07" android:textSize="30dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_weight="0.09">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/username"
                android:id="@+id/username" android:textStyle="bold" android:textSize="20dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usertext" android:layout_weight="1" android:text="@string/usernamehint"
                android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0.28">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password"
                android:id="@+id/password" android:textStyle="bold" android:textSize="20dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passtext" android:layout_weight="1" android:text="@string/passwordhint"
                android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/submitLogin" android:layout_weight="1" android:background="@drawable/button_colour"
                android:textStyle="bold" android:textSize="25dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel" android:layout_weight="1" android:background="@drawable/button_colour"
                android:textStyle="bold" android:textSize="25dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0.07">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="The details you have entered are incorrect"
                android:id="@+id/errormessage" android:textColor="#ff0f27" android:textSize="15dp"
                android:textStyle="bold" android:typeface="normal" android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>